# imageprep

./: blipcaption.py  checkfiles.py  compareimages.py  convertcaptions.py  crop_and_removebg_dogs.py  crop_dogs.py  environment.yml  pixi.toml  pyproject.toml  renamefiles.py  resize_from_square.py
pinterest/: get_images.py
src/caption/: blipcaption.py
src/captions/: captionsui.py  convert_captions_mflux.py
src/folders/: checkfiles.py  renamefiles.py
src/resize/: crop_dogs.py  resize_from_square.py  resizeui.py
