[project]
authors = [{name = "Dana Case", email = "case.danal@gmail.com"}]
name = "imageprep"
version = "0.1.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tasks]

[dependencies]
pillow = ">=11.1.0,<12"
numpy = ">=2.2.4,<3"
python = "*"
libheif = ">=1.14.0,<2"
pillow_heif = "*"

[tool.pixi.pypi-options]
# Will build detectron2 and fvcore without isolation
# in the default environment
no-build-isolation = ["pillow_heif"]
